added more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-*.swp
-*~
-*.o
-configure
+depcomp
+missing
+install-sh
+aclocal.m4
 autom4te.cache
+debug.log
+Makefile
+Makefile.in
+logs
+configure
 config.log
 config.status
+config.sub
+config.guess
+*.swp
+*.d
+.objs
+.deps
+.dirstamp
