--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,10 @@ AC_INIT([helloscott], [1.0])
 
 AC_CONFIG_SRCDIR([src/main.h])
 
+AM_INIT_AUTOMAKE([dist-bzip2 foreign subdir-objects])
+
+AC_PROG_CC
+
 AC_CONFIG_FILES([Makefile])
 
 AC_OUTPUT
