--- a/configure.ac
+++ b/configure.ac
@@ -4,7 +4,8 @@ AC_CONFIG_SRCDIR([src/main.h])
 
 AM_INIT_AUTOMAKE([dist-bzip2 foreign subdir-objects])
 
-AC_PROG_CC
+AC_PROG_CXX
+AC_LANG(C++)
 
 AC_CONFIG_FILES([Makefile])
 
